# Detetive

./: .gitignore  CMakeLists.txt  CompleteHistory.txt  Historia completa.txt  README.md  eighthwindow.cpp  eighthwindow.ui  eleventhwindow.cpp  eleventhwindow.ui  fifteenthwindow.cpp  fifteenthwindow.ui  fifthwindow.cpp  fifthwindow.h  fifthwindow.ui  forthwindow.cpp  forthwindow.ui  fourteenthwindow.cpp  fourteenthwindow.h  fourteenthwindow.ui  headers.h  historia_ErickGuilherme.txt  images.qrc  lista.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ninthwindow.cpp  ninthwindow.ui  pathwindow.cpp  secwindow.cpp  secwindow.h  secwindow.ui  seventeenthwindow.cpp  seventhwindow.cpp  seventhwindow.ui  sixteenthwindow.cpp  sixthwindow.cpp  sixthwindow.ui  telas.txt  (+9 more)
Imagens/: unknown.png.url
SDL_test/: main.cpp
headers/: eighthwindow.h  eleventhwindow.h  fifteenthwindow.h  fifthwindow.h  forthwindow.h  fourteenthwindow.h  mainwindow.h  ninthwindow.h  pathwindow.h  secwindow.h  seventeenthwindow.h  seventhwindow.h  sixteenthwindow.h  sixthwindow.h  tenthwindow.h  thirdwindow.h  thirteenthwindow.h  twelfthwindow.h
src/: eighthwindow.cpp  eleventhwindow.cpp  fifteenthwindow.cpp  fifthwindow.cpp  forthwindow.cpp  fourteenthwindow.cpp  mainwindow.cpp  ninthwindow.cpp  secwindow.cpp  seventhwindow.cpp  sixthwindow.cpp  tenthwindow.cpp  thirdwindow.cpp  thirteenthwindow.cpp  twelfthwindow.cpp
ui/: eighthwindow.ui  eleventhwindow.ui  fifteenthwindow.ui  fifthwindow.ui  forthwindow.ui  fourteenthwindow.ui  mainwindow.ui  ninthwindow.ui  pathwindow.ui  secwindow.ui  seventeenthwindow.ui  seventhwindow.ui  sixteenthwindow.ui  sixthwindow.ui  tenthwindow.ui  thirdwindow.ui  thirteenthwindow.ui  twelfthwindow.ui
